@@ -32,9 +32,11 @@ import javax.swing.event.*;
  * it is somewhere in between <code>System.out.println()</code> and
  * full-blown logging packages such as log4j.<p>
  *
- * All events are logged to a Swing text document and optionally a stream,
+ * All events are logged to an in-memory buffer and optionally a stream,
  * and those with a high urgency (warnings and errors) are also printed
  * to standard output.<p>
+ *
+ * Logging of exception tracebacks is supported.<p>
  *
  * This class can also optionally redirect standard output and error to the log.
  *
